<resources>
    <string name="app_name">InstaMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notif">اطلاعیه ها</string>
    <string name="common_question">سوالات متداول</string>
    <string name="rule">قوانین</string>
    <string name="buy_site">خرید سایت مستقل</string>
    <string name="represent">اخذ نمایندگی</string>
    <string name="income">کسب درامد</string>
    <string name="api">مستندات api</string>
    <string name="back_up">پشتیبانی</string>
    <string name="about_us">درباره ما</string>
    <string name="lucky_wheel">گردونه شانس</string>
    <string name="raise_stock">افزایش موجودی</string>
    <string name="order">ثبت سفارش</string>
    <string name="transaction">لیست تراکنش ها</string>
    <string name="payment_report">گزارش پرداخت ها</string>
    <string name="order_report">گزارشات سفارشات</string>

    <string name="login">اگر قبلا در سایت ما ثبت نام کرده اید با همان مشخصات و پسورد میتوانید وارد برنامه شوید</string>
    <string name="email">نام کاربری یا پست الکترونیک (ایمیل)</string>
    <string name="password">رمز عبور (password)</string>

    <string name="register">با ثبت نام در این برنامه به صورت همزمان بصورت اتوماتیک در سایت هم برای شما ثبت نام انجام می شود و با همین اطلاعات می توانید وارد پنا کاربری خود در سایت شوید</string>

    <string name="f_name">نام</string>
    <string name="l_name">نام خانوادگی</string>
    <string name="register_email">پست الکترونیک (ایمیل)</string>
    <string name="username">نام کاربری (username)</string>
    <string name="phone">شماره همراه</string>
    <string name="re_password">تکرار رمز عبور</string>

    <string name="title1">فالوور و لایک رایگان</string>
    <string name="title2">گردونه شانس</string>
    <string name="title3">نمایندگی مستقل</string>
    <string name="title4">امکانات بی نظیر</string>

    <string name="body1">بدون هیچ سوال و جوابی فالوور و لایک رایگان از ما هدیه بگیرید</string>
    <string name="body2">بدون داشتن گزینه پوچ و بدون انجام هیچ کاری پول نقد از ما هدیه بگیرید</string>
    <string name="body3">فقط در عرض (2 ثانیه) سایت تحویل بگیرید و کسب و کار خودتون رو با نام خودتون راه اندازی کنید و پول پارو کنید</string>
    <string name="body4">امکانات انحصاری و شگفت انگیز سایت ما، شما را بهت زده خواهد کرد</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="confirm">بله، قبول می کنم که ثبت و انجام این سفارش مورد تایید کامل من می باشد</string>

    <string name="transaction_type">نوع تراکنش:</string>
    <string name="transaction_amount">مبلغ:</string>
    <string name="transaction_status">وضعیت تراکنش:</string>
    <string name="transaction_date">تاریخ:</string>


    <string name="agent_name">نام طرح: </string>
    <string name="agent_price">قیمت: </string>
    <string name="agent_date">مدت نمایندگی: </string>
    <string name="agent_desc">اطلاعات بیشتر</string>
    <string name="stock">موجودی شما</string>
    <string name="accept">ثبت</string>
    <string name="choose_category">دسته بندی خود را انتخاب کنید</string>
    <string name="choose_service">سرویس خود را انتخاب کنید</string>

    <string name="salb">تذکر: لطفا قبل از خرید سایت ابتدا از پروفایل خود بخش (اطلاعات کاربری) و بخش (اطلاعات دامین) را تکمیل کنید. "سلب مسئولیت"</string>
    <string name="more_info">اطلاعات بیشتر</string>
    <string name="order_reports">گزارش سفارشات</string>
    <string name="order_address">آدرس سفارش:</string>
    <string name="shenase_order">شناسه سفارش:</string>
    <string name="rules">قوانین</string>
    <string name="contact_us">تماس با ما</string>
    <string name="zarinpal_desc">شما میتوانید با درگاه (زرین پال) حساب خود را شارژ نمائید. این مبلغ به صورت خودکار به اعتبار شما اضافه خواهد شد</string>
    <string name="discount_code">اگر کد تخفیف دارید وارد کنید</string>
    <string name="example_amount">5000 تومان</string>
    <string name="raise_stock_check_box">بله من قطعا می دانم که بعد از اینکه مبلغ پرداخت و اضافه شد من نمی توانم درخواست بازگشت پول را داشته باشم</string>
    <string name="blog">وبلاگ</string>
    <string name="make_money">از طریق کد بالا می توانید با دعوت دوستان خود به اینستامارکت کسب درامد داشته باشید</string>
</resources>