<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_130sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        android:elevation="20dp"
        android:backgroundTint="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/_6sdp">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/_3sdp"
                android:text="@string/agent_name"
                android:gravity="right|center_vertical"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/_3sdp"
                android:text="@string/agent_price"
                android:gravity="right|center_vertical"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/_3sdp"
                android:text="@string/agent_date"
                android:gravity="right|center_vertical"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/agent_desc"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>