<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MoreFeatureFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imageSlider3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_margin="@dimen/_5sdp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:elevation="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/news"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:src="@drawable/ic_announcement" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_4sdp"
                                android:gravity="center"
                                android:text="@string/notif"
                                android:textColor="@color/teal_200" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:elevation="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/btn_faq"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:src="@drawable/ic_question" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_4sdp"
                                android:gravity="center"
                                android:text="@string/common_question"
                                android:textColor="@color/teal_200" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:elevation="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/btn_rule"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:src="@drawable/ic_rule" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_4sdp"
                                android:gravity="center"
                                android:text="@string/rule"
                                android:textColor="@color/teal_200" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:elevation="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/buy_site"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:src="@drawable/ic_buy_site" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_4sdp"
                                android:gravity="center"
                                android:text="@string/buy_site"
                                android:textColor="@color/teal_200" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:elevation="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/btn_agents"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:src="@drawable/ic_represent" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_4sdp"
                                android:gravity="center"
                                android:text="@string/represent"
                                android:textColor="@color/teal_200" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:elevation="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/btn_make_money"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:src="@drawable/ic_income" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_4sdp"
                                android:gravity="center"
                                android:text="@string/income"
                                android:textColor="@color/teal_200" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:elevation="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/btn_api"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:src="@drawable/ic_api" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_4sdp"
                                android:gravity="center"
                                android:text="@string/api"
                                android:textColor="@color/teal_200" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:elevation="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/btn_contact_us"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="59dp"
                                android:layout_height="@dimen/_50sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:src="@drawable/ic_customer_service" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_4sdp"
                                android:gravity="center"
                                android:text="@string/back_up"
                                android:textColor="@color/teal_200" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:elevation="10dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/btn_about_us"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="@dimen/_50sdp"
                                android:layout_height="@dimen/_50sdp"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:src="@drawable/ic_about_us" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_4sdp"
                                android:gravity="center"
                                android:text="@string/about_us"
                                android:textColor="@color/teal_200" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </TableRow>
            </TableLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_blog"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_65sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/button6"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:contentDescription="@string/blog"
                android:src="@drawable/ic_blog"
                app:tint="@color/teal_200" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/blog"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>