<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_170sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_3sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        android:elevation="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:text="@string/transaction_type" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:text="@string/transaction_amount"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:textColor="@color/teal_200"
                    android:textSize="@dimen/_12sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:text="@string/transaction_status"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:layout_margin="@dimen/_3sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:text="@string/transaction_date" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>